fix transfer issue
