# cmd/docs/swagger.json
@@ -85,7 +85,7 @@
                     {
                         "type": "string",
                         "description": "address of the account balance to get",
-                        "name": "account",
+                        "name": "address",
                         "in": "path",
                         "required": true
                     }
@@ -170,7 +170,7 @@
                 }
             }
         },
-        "/api/transfers/create": {
+        "/api/transfers/make": {
             "post": {
                 "security": [
                     {
@@ -192,7 +192,7 @@
                 "parameters": [
                     {
                         "description": "Info for creating transfer",
-                        "name": "bill",
+                        "name": "transfer",
                         "in": "body",
                         "required": true,
                         "schema": {
